# random-universe-cipher

./: .gitignore  README.md
random-universe-cipher/: MAXIMUM_SPEEDUP_COMPLETE.md  PERFORMANCE_STATUS.md  PERFORMANCE_SUMMARY.md  QUICK_START.md  WASM_COMPLETE.md  WASM_SETUP.md  WASM_STATUS.md  WHY_WASM_IS_DISABLED.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
random-universe-cipher/src/: index.ts
random-universe-cipher/src/cipher/: aead.ts  encrypt-wasm-hybrid.ts  index.ts  modes-fast.ts  modes-wasm.ts  optimizations.md  shake256.ts  wasm-accelerated.ts
random-universe-cipher/src/ui/: demo.ts  file-streaming.ts  styles.css
random-universe-cipher/src/worker/: crypto-worker.ts
random-universe-cipher/tests/: aead.test.ts  avalanche.test.ts  gf-math.test.ts  kdf.test.ts  password-encryption.test.ts  roundtrip.test.ts  sbox.test.ts
random-universe-cipher/wasm/: .gitignore  Cargo.toml  README.md
random-universe-cipher/wasm/src/: lib.rs
